--- a/style-ver2.css
+++ b/style-ver2.css
@@ -840,8 +840,8 @@
 }
 
 .onp-sociallocker-flat .onp-sociallocker-button-facebook .onp-sociallocker-overlay-front {
-    background: #3c5a9a;
-    border-bottom-color: #082b6f;
+    background: #51b75a;
+    border-bottom-color: #429e4a;
 }
 .onp-sociallocker-flat .onp-sociallocker-button-facebook .onp-sociallocker-overlay-icon {
     background-position: 15px 9px;
